# auto-video-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.obsidian/: workspace.json
Auto-Video-7일-부트캠프/: 00-시작하기.md  Day-1-큰그림과-개념.md  Day-10-검증과-개선안.md  Day-11-Claude-Code-연결.md  Day-2-환경설정.md  Day-3-에이전트-시스템.md  Day-4-Phase1-브랜드세팅.md  Day-5-Phase2-리서치와대본.md  Day-6-Phase2-비주얼과음성.md  Day-7-합성과-완주.md  Day-8-에이전트-하네스와-AI-Native.md  Day-9-스크립트는-누가-만드나.md  부록-명령어-치트시트.md  부록-용어사전.md  부록-최종-체크리스트.md  부록-트러블슈팅.md
Auto-Video-7일-부트캠프/실습기록/: 실습기록.md
agents/: director.md
agents/phase1/: benchmark-analyst.md  brand-architect.md  narrative-designer.md  topic-strategist.md
agents/phase2/: compositor.md  image-generator.md  researcher.md  scene-director.md  scriptwriter.md  video-generator.md  voice-producer.md
autovideo/: README.md  __init__.py  agent_runner.py  cli.py  env.py  llm_client.py  mcp_server.py  orchestrator.py
brand/: benchmark.yaml  character.yaml  narrative.yaml  topics.yaml
brand-example/: benchmark.yaml  character.yaml  narrative.yaml  topics.yaml
commands/: create-c.md
config/: api-keys.env.example  models.yaml
docs/: kling-prompt-guide.md
examples/sample-project/: capcut-config.example.json  image-prompts.md  script-ko.md  script.md  video-prompts.md
guides/: CAPCUT_GUIDE.md
projects/ai/: image-prompts.md  research.md  script.md  video-prompts.md  (+1 more)
scripts/: capcut-project-gen.py  compositor.py  elevenlabs_tts.py  gemini_client.py  generate_images.py  generate_videos.py  produce.py  youtube_metadata.py
tests/: test_autovideo.py
(+1 files in other folders)
